@@ -1,3 +1,5 @@
 Jeroen T. Vermeulen <jtv@xs4all.nl>.  Wrote the code.
 Ray Dassen <jdassen@debian.org>.  Did most of the autoconf etc. stuff 
 
+Lots of others helped with various other contributions.
+
